--- a/index.html
+++ b/index.html
@@ -13,27 +13,28 @@
     <div class="parent">
         <div class="calc-case">
             <div class="display">
-                <div class="displayNum">0</div>
+                <div class="previousDisplay" data-previousDisplay></div>
+                <div class="currentDisplay" data-currentDisplay></div>
             </div>
             <div class="button-area">
-                <button class="clear">AC</button>
-                <button class="delete">DEL</button>
-                <button class="number" id="7">7</button>
-                <button class="number" id="8">8</button>
-                <button class="number" id="9">9</button>
-                <button class="operator" id="divide">÷</button>
-                <button class="number" id="4">4</button>
-                <button class="number" id="5">5</button>
-                <button class="number" id="6">6</button>
-                <button class="operator" id="multiply">×</button>
-                <button class="number" id="1">1</button>
-                <button class="number" id="2">2</button>
-                <button class="number" id="3">3</button>
-                <button class="operator" id="subtract">-</button>
-                <button class="number" id="0">0</button>
-                <button class="operator" id="decimal">.</button>
-                <button class="operator" id="equal">=</button>
-                <button class="operator" id="add">+</button>
+                <button class="clear" data-clear>AC</button>
+                <button data-delete>DEL</button>
+                <button data-operation>÷</button>
+                <button data-number>7</button>
+                <button data-number>8</button>
+                <button data-number>9</button>
+                <button data-operation>×</button>
+                <button data-number>4</button>
+                <button data-number>5</button>
+                <button data-number>6</button>
+                <button data-operation>-</button>
+                <button data-number>1</button>
+                <button data-number>2</button>
+                <button data-number>3</button>
+                <button class="add" data-operation>+</button>
+                <button data-number>.</button>
+                <button data-number>0</button>
+                <button data-equals>=</button>
             </div> 
         </div>
     </div>
