--- a/index.html
+++ b/index.html
@@ -13,28 +13,28 @@
     <div class="parent">
         <div class="calc-case">
             <div class="display">
-                <div class="previousDisplay" data-previousDisplay></div>
-                <div class="currentDisplay" data-currentDisplay></div>
+                <div class="previousDisplay"></div>
+                <div class="currentDisplay"></div>
             </div>
             <div class="button-area">
-                <button class="clear" data-clear>AC</button>
-                <button data-delete>DEL</button>
-                <button data-operation>÷</button>
-                <button data-number>7</button>
-                <button data-number>8</button>
-                <button data-number>9</button>
-                <button data-operation>×</button>
-                <button data-number>4</button>
-                <button data-number>5</button>
-                <button data-number>6</button>
-                <button data-operation>-</button>
-                <button data-number>1</button>
-                <button data-number>2</button>
-                <button data-number>3</button>
-                <button class="add" data-operation>+</button>
-                <button data-number>.</button>
-                <button data-number>0</button>
-                <button data-equals>=</button>
+                <button class="clear">AC</button>
+                <button class="delete">DEL</button>
+                <button class="operator">÷</button>
+                <button class="number">7</button>
+                <button class="number">8</button>
+                <button class="number">9</button>
+                <button class="operator">×</button>
+                <button class="number">4</button>
+                <button class="number">5</button>
+                <button class="number">6</button>
+                <button class="operator">-</button>
+                <button class="number">1</button>
+                <button class="number">2</button>
+                <button class="number">3</button>
+                <button class="operator" id="add">+</button>
+                <button class="decimal">.</button>
+                <button class="number">0</button>
+                <button class="equals">=</button>
             </div> 
         </div>
     </div>
